@@ -1,6 +1,11 @@
+2005-10-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* nslog/nslog.c (Ns_ModuleInit): failed to create the log
+	file when given the relative path.
+
 2005-10-17  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
-	* nsdlog/nslog.c: missed initialization of logfile descriptor.
+	* nslog/nslog.c: missed initialization of logfile descriptor.
 	This caused us to close invalid descriptor in LogOpen. As the
 	result, the interactive NS mode assumed non-interactive use and
 	prematurely exited.
